--- a/sharpe-calculator/sharpe-calculator.cabal
+++ b/sharpe-calculator/sharpe-calculator.cabal
@@ -14,12 +14,16 @@ category:            Web
 build-type:          Simple
 extra-source-files:  README.md
                      CHANGELOG.md
+library
+  hs-source-dirs:      src
+  exposed-modules:     Loader, Types
+  build-depends:       base, directory
 
 executable sharpe-calculator
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5, directory
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
@@ -29,3 +33,4 @@ executable sharpe-calculator
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
+  other-modules:       Loader, Types
