--- a/sharpe-calculator/sharpe-calculator.cabal
+++ b/sharpe-calculator/sharpe-calculator.cabal
@@ -16,14 +16,14 @@ extra-source-files:  README.md
                      CHANGELOG.md
 library
   hs-source-dirs:      src
-  exposed-modules:     Loader, Types
-  build-depends:       base, directory
+  exposed-modules:     Loader, Types, Simulate
+  build-depends:       base, directory, random
 
 executable sharpe-calculator
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, directory
+  build-depends:       base >= 4.7 && < 5, directory, random
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
@@ -33,4 +33,4 @@ executable sharpe-calculator
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
-  other-modules:       Loader, Types
+  other-modules:       Loader, Types, Simulate
